kubernetes/apps/downloads/prowlarr/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr
  namespace: downloads
  labels:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr

  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
    - toEntities:
        - cluster
